GNOME Bugzilla – Bug 727812
directsoundsrc: CRITICAL, debug category not defined
Last modified: 2014-04-08 11:39:38 UTC
Created attachment 273775 [details] [review] Trivial fix In directsoundsrc.c:161 (gst_directsound_src_class_init): GST_DEBUG ("initializing directsoundsrc class"); But the debug category is not defined until line 181: GST_DEBUG_CATEGORY_INIT (directsoundsrc_debug, "directsoundsrc", 0, "DirectSound Src"); Therefore, we get this annoying (although harmless) Glib Critical: GStreamer-CRITICAL **: gst_debug_log_valist: assertion 'category != NULL' failed
Comment on attachment 273775 [details] [review] Trivial fix Can you attach this in "git format-patch" format?
Created attachment 273782 [details] [review] trivil fix Patch in git format-patch format now.
commit e12646f30a66e0d9f5586f5cb64963d728f081ca Author: Xavi Artigas <xartigas@fluendo.com> Date: Tue Apr 8 13:20:54 2014 +0200 directsoundsrc: Fix critical due to missing debug category initialization https://bugzilla.gnome.org/show_bug.cgi?id=727812