directsoundsrc: Fix critical due to missing debug category initialization

https://bugzilla.gnome.org/show_bug.cgi?id=727812